@@ -5,9 +5,29 @@
     // use jquery to toggle value element
 </script>
 
+<?php $toolbox->form->open('', 'fkt=settings_admin', false, array('id'=>'settings_form_create')) ?>
+    <fieldset>
+        <legend>Create New Setting</legend>
+        <p>
+            <input type="hidden" name="fkt" value="ZMSettingsAdminController">
+            <input type="hidden" name="action" value="create">
+            Title: <input type="text" name="title">
+            Key: <input type="text" name="key">
+            Value: <input type="text" name="value">
+            Type: <select name="type">
+                <option value="TextFormWidget#">Text</option>
+                <option value="BooleanFormWidget#style=select">Boolean (dropdown)</option>
+                <option value="BooleanFormWidget#style=radio">Boolean (radio)</option>
+                <option value="BooleanFormWidget#style=checkbox">Boolean (checkbox)</option>
+            </select>
+        </p>
+        <p><input type="submit" value="create"></p>
+    </fieldset>
+</form>
+
 <?php $toolbox->form->open('', 'fkt=settings_admin', false, array('id'=>'settings_form_update')) ?>
     <fieldset>
-        <legend>Settings</legend>
+        <legend>Current Settings</legend>
         <table>
             <thead>
                 <tr>
@@ -33,22 +53,4 @@
         <p><input type="submit" value="update"></p>
     </fieldset>
 </form>
-<?php $toolbox->form->open('', 'fkt=settings_admin', false, array('id'=>'settings_form_create')) ?>
-    <fieldset>
-        <legend>New Setting</legend>
-        <p>
-            <input type="hidden" name="fkt" value="ZMSettingsAdminController">
-            <input type="hidden" name="action" value="create">
-            Title: <input type="text" name="title">
-            Key: <input type="text" name="key">
-            Value: <input type="text" name="value">
-            Type: <select name="type">
-                <option value="TextFormWidget#">Text</option>
-                <option value="BooleanFormWidget#style=select">Boolean (dropdown)</option>
-                <option value="BooleanFormWidget#style=radio">Boolean (radio)</option>
-                <option value="BooleanFormWidget#style=checkbox">Boolean (checkbox)</option>
-            </select>
-        </p>
-        <p><input type="submit" value="create"></p>
-    </fieldset>
-</form>
+
